@@ -1,6 +1,10 @@
 20080228
  - (dtucker) [configure.ac] Add -fstack-protector to LDFLAGS too, fixes
    linking problems on AIX with gcc 4.1.x.
+ - (dtucker) [includes.h ssh-add.c ssh-agent.c ssh-keygen.c ssh.c sshd.c
+   openbsd-compat/openssl-compat.{c,h}] Bug #1437 Move the OpenSSL compat
+   header to after OpenSSL headers, since some versions of OpenSSL have
+   SSLeay_add_all_algorithms as a macro already.
 
 20080225
  - (dtucker) [openbsd-compat/fake-rfc2553.h] rename ssh_gai_strerror hack
@@ -3631,4 +3635,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4842 2008/02/28 04:01:13 dtucker Exp $
+$Id: ChangeLog,v 1.4843 2008/02/28 08:13:52 dtucker Exp $
